Ajuste requests para retornar objeto com erros pertinentes/tratáveis previstos Ajustado cancelamento e gerador de id de cancelamento para desconsiderar parâmetro que aparentemente foi removido (testado somente em homologação, schemas com descrição incorreta)